# karaorust

./: .gitignore  .travis.yml  Cargo.toml  README.md
data/: Natalie_Portman_-_Natalies_Rap.txt
src/: lib.rs  main.rs  parser.rs  tests.rs
src/parser/: mod.rs
