[package]

name = "karaorust"
version = "0.0.1"
authors = ["Laurent Arnoud <laurent@spkdev.net>"]
description = "Karoke on console"
repository = "https://github.com/spk/karaorust"
keywords = ["karaoke", "console"]
license = "WTFPL"

[dependencies]
combine = { git = "https://github.com/Marwes/combine" }
