[package]
name = "karaorust"
version = "0.0.1"
authors = ["Laurent Arnoud <laurent@spkdev.net>"]
description = "Karoke on console"
repository = "https://github.com/spk/karaorust.git"
homepage = "https://github.com/spk/karaorust"
keywords = ["karaoke", "console"]
license = "WTFPL"
readme = "README.md"

[[bin]]
name = "karaorust"

[lib]
name = "karaorust"

[dependencies]
combine = "1.2.1"
